fix: change getUserEvents to url encoded
